--- a/src/client/View/MainMenu/MainMenuView.fxml
+++ b/src/client/View/MainMenu/MainMenuView.fxml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="346.0" prefWidth="600.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.MainMenu.MainMenuViewController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="332.0" prefWidth="600.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.MainMenu.MainMenuViewController">
    <children>
       <HBox alignment="CENTER" style="-fx-background-color: #7f878f;">
          <children>
@@ -35,7 +42,12 @@
             </Pane>
          </children>
       </HBox>
-      <GridPane prefHeight="260.0" prefWidth="600.0">
+      <HBox alignment="CENTER">
+         <children>
+            <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" text="errorLabel" textAlignment="CENTER" textFill="RED" />
+         </children>
+      </HBox>
+      <GridPane prefHeight="194.0" prefWidth="600.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
@@ -66,11 +78,6 @@
                      </font>
                   </Label>
                   <Label alignment="TOP_LEFT" layoutX="129.0" layoutY="64.0" prefHeight="41.0" prefWidth="144.0" text="Add new events, delete, edit and view existing" wrapText="true" />
-                  <HBox alignment="CENTER" layoutX="-103.0" layoutY="-10.0" prefHeight="48.0" prefWidth="206.0">
-                     <children>
-                        <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" text="errorLabel" textAlignment="CENTER" textFill="RED" />
-                     </children>
-                  </HBox>
                </children>
             </Pane>
             <Pane GridPane.columnIndex="1" GridPane.rowIndex="1">
