--- a/src/client/View/Room/CreateRoomView.fxml
+++ b/src/client/View/Room/CreateRoomView.fxml
@@ -176,6 +176,11 @@
             </Button>
          </children>
       </HBox>
+      <HBox alignment="CENTER">
+         <children>
+            <Label fx:id="errorLabel" text="errorLabel" textFill="RED" />
+         </children>
+      </HBox>
    </children>
    <padding>
       <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
