--- a/src/client/View/Event/EventListView.fxml
+++ b/src/client/View/Event/EventListView.fxml
@@ -207,7 +207,7 @@
             </VBox>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="3">
                <children>
-                  <Button mnemonicParsing="false" onAction="#infoPress" prefHeight="34.0" prefWidth="18.0">
+                  <Button fx:id="infoButton" mnemonicParsing="false" onAction="#infoPress" prefHeight="34.0" prefWidth="18.0">
                      <font>
                         <Font size="24.0" />
                      </font>
